--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,11 @@ services:
       - "3000:3000"
     environment: 
       PORT : 3000
+    healthcheck:
+      test: curl --fail -s http://localhost:3000/login || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   test:
     build: ./back
